--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,34 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    
+    padding: 0;
+    margin: 0;
+    
+    font-family: Lato, 'Roboto', sans-serif;
+    line-height: 22px;
+    
+}
+
+* {
+    
+    outline: none;
+    
+}
+
+input, textarea {
+    
+    caret-color: rgb(220, 0, 255) !important;
+    
+}
+
+.flex {
+    
+    display: flex;
+    align-items: center;
+    
+}
+
+.p-20 {
+    
+    padding: 20px;
+    
+}
