Header and footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,12 @@
 
     </div>
 
+    <div class="home">
+
+        <app-home></app-home>
+
+    </div>
+
     <div class="footer">
 
         <app-footer></app-footer>
