--- a/src/app/_layout/header/header.component.scss
+++ b/src/app/_layout/header/header.component.scss
@@ -1,74 +1,115 @@
 :host {
-    
+
     .wrapper {
-        
+
         justify-content: space-between;
-        
+
         .left {
-            
+
             .logo {
-                
+
                 img {
-                    
+
                     max-width: 150px;
-                    
+
                 }
-                
+
             }
-            
-        }
-        
-        .right {
-            
-            .search {
-                
-                input {
-                    
-                    padding: 10px;
-                    font-size: 16px;
-                    
-                    min-width: 400px;
-                    
-                    border: 1px solid #ddd;
-                    
-                    -webkit-border-radius: 4px;
-                    -moz-border-radius: 4px;
-                    border-radius: 4px;
-                    
-                }
-                
-            }
-            
+
             .menu {
-                
+
                 .item {
-                    
+
+
                     margin: 20px;
                     padding: 15px;
-                    
+
                     cursor: pointer;
-                    
+
                     font-size: 14px;
                     letter-spacing: 2px;
-                    
+
+                    border-radius: 99px;
+
+
                     &:hover {
-                        
-                        border-bottom: 4px solid rebeccapurple;
-                        
+
+                        background: #F7F9FA;
+
                     }
-                    
+
                 }
-                
+
                 .item.active {
-                    
-                    border-bottom: 4px solid yellowgreen;
-                    
+
                 }
-                
+
             }
-            
+
         }
-        
+
+        .right {
+
+
+            .nav-item {
+
+                font-family: Roboto, "Helvetica Neue", sans-serif;
+                font-size: 15px;
+                color: #367BF5;
+                font-weight: bold;
+
+                line-height: 16px;
+                display: flex;
+                flex-direction: row;
+
+                letter-spacing: 0.75px;
+                border-radius: 99px;
+                cursor: pointer;
+
+                .nav-item.active {
+
+                    background: #9BAAFA;
+
+                }
+
+                &:hover {
+
+                    background: #9BAAFA;
+
+                }
+
+
+            }
+
+            .menu-flex {
+
+                display: flex;
+                flex-direction: row;
+
+            }
+
+            .search {
+
+                input {
+
+                    padding: 10px;
+                    font-size: 16px;
+
+                    min-width: 400px;
+
+                    border: 1px solid #E3E5E6;
+
+                    -webkit-border-radius: 99px;
+                    -moz-border-radius: 99px;
+                    border-radius: 99px;
+                    box-sizing: border-box;
+
+                }
+
+            }
+
+        }
+
     }
-    
+
 }
